--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -9,61 +9,82 @@
 <% end %>
 
 <hr/>
-<br/>
-<div class="calender">
-  <table class="regular">
+
+<h4 class=""><%= @period.month_name -%></h4>
+
+<div class="calender_activities">
+    <table style="border-collapse: collapse;">
+      <% @activities_summary.each do |entry| %>
+        <tr>
+          <td><%= entry[:name] -%></td>
+          <td style="text-align:right"><%= entry[:hours] -%></td>
+        </tr>
+      <% end %>
+      <tr>
+        <td style="border-top-style: solid;border-width: 1px">
+          <b>Total:</b>
+        </td>
+        <td style="border-top-style: solid;border-width: 1px; text-align:right">
+          <b> <%= @period.total_hours -%></b>
+        </td>
+      </tr>
+    </table>
+    <br/><br/>
+    <div style="text-align:right"><%= link_to 'View details', user_month_review_path(@user, :id => :listing) %> </div>
+</div>
+
+<div class="calender" style="width:450px">
+ 
+  <table width="100%" class="regular">
     <tr>
-      <td></td>
+      <th></th>
       <th>Mon</th>
       <th>Tue</th>
       <th>Wed</th>
       <th>Thu</th>
       <th>Fri</th>
-      <th class="error">Sat</th>
-      <th class="error">Sun</th>
+      <th>Sat</th>
+      <th>Sun</th>
     </tr>
     <% @period.start.beginning_of_week.upto(@period.end.end_of_week) do |d| %>
       <% if d.wday == 1 %>
         <tr>
-          <th><%= link_to d.cweek.to_s, user_time_entries_path(:user_id => @user, :date => d) %></th>
+          <td>
+            &nbsp;&nbsp;<b><%= link_to d.cweek.to_s, user_time_entries_path(:user_id => @user, :date => d) %></b>&nbsp;&nbsp;&nbsp;
+          </td>
         <% end %>
-        <td <%= 'style="color: #eeeeee;"' if d.month != @period.start.month %>><%= @user.hours_on_day d -%></td>
+        <td <%= 'style="color: #E0E0E0;"' if d.month != @period.start.month %>><%= @user.hours_on_day d -%></td>
         <% if d.wday == 0 %>
         </tr>
       <% end -%>
     <% end %>
   </table>
+  <div class="footer"> Hours: <%= "#{@period.total_hours} / #{@period.expected_hours}" %>, days: X / YY</div>
 </div>
-<br />
-<table>
-	<% @activities_summary.each do |entry| %>
-		<tr>
-			<td><%= entry[:name] -%></td>
-			<td><%= entry[:hours] -%></td>
-			</tr>
-	<% end %>
-	<tr>
-		<td>Total:</td>
-		<td> <%= @period.total_hours -%></td>
-	</tr>
-</table>
 
-<% if @period.locked? -%>
-	<p>
-		<b>You have submitted this month.</b>
-	</p>
-<% elsif @period.ready_for_approval? -%>
-   <p>
-		<% form_tag lock_user_time_entries_path(@user) do -%>
-			<%= hidden_field_tag "user_id", @user.id %>
-			<%= hidden_field_tag "start_date", @period.start %>
-			<%= hidden_field_tag "end_date", @period.end %>
-			<%= submit_tag "Submit for billing"%>
-		<% end -%> 
-	</p>
-	<br/>
-<% else -%>
-	<p>
-		<b><%= "You have not registered enough hours this month. Expected #{@period.expected_hours}, but was #{@period.total_hours}." %></b>		
-	</p>
-<% end -%>
+<br/>
+<hr/>
+<br/>
+
+<div class="center">
+  <% if @period.locked? -%>
+    <input type="submit" value="You have submitted this month" disabled="true">
+  <% elsif @period.ready_for_approval? -%>
+    <p>
+      <% form_tag lock_user_time_entries_path(@user) do -%>
+        <%= hidden_field_tag "user_id", @user.id %>
+        <%= hidden_field_tag "start_date", @period.start %>
+        <%= hidden_field_tag "end_date", @period.end %>
+        <%= submit_tag "Submit for billing"%>
+      <% end -%>
+    </p>
+  <% else -%>
+    <input type="submit" value="Not ready for submission" disabled="true">
+  <% end -%>
+</div>
+
+
+
+
+
+
