--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,32 +14,43 @@ table {
     margin-bottom: 30px;
 }
 
-.calender table { text-align:center}
+.calender .footer {
+    font-size:80%;
+    color:gray;
+    margin-top:5px;
+    text-align:right;
+    width:450px
+}
 
- /* Time entry day header */
-.container {
-   position: relative;
-   height:20px;
-   margin-bottom:8px;
-   background-color:#EEEEEE;
-   }
+.calender table { 
+    text-align:center;
+    border-collapse: collapse;
+    border-style: solid;
+    border-width: 1px;
+    border-color:gray
+}
 
-.left-element {
-   position: absolute;
-   left: 2px;
-   width: 50%;
-   font-size: 120%;
-   }
+.calender table tr th {
+    border-bottom-style: solid;
+    border-width: 1px;
+    border-color: gray
+}
 
-.right-element {
-   position: absolute;
-   right: 10px;
-   top: 2px;
-   width: 50%;
-   color: gray;
-   text-align: right;
-   }
+.calender_activities {
+    float:right;
+/*    border-left:1px dotted;*/
+    min-height:158px;
+    padding-left:10px;
+    color:#444444
+}
 
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em;
+
+}
 
 
 .activity_header {
