--- a/app/views/reports/_billing_content.erb
+++ b/app/views/reports/_billing_content.erb
@@ -4,11 +4,11 @@
   <p class="error"><%= flash[:error] %></p>
 
   <% form_tag 'billing_action', :method => 'get', :id => 'billing_workflow' do %>
-    <table>
+    <table class="regular">
       <% Customer.all.each do |customer| %>
-        <tr><td></td></tr>
+        
         <tr>
-          <td> <b><%= customer.name %>:</b></td>
+          <td colspan="99"> <h3 style="margin-bottom:6px;margin-top:10px"><%= customer.name %></h3></td>
         </tr>
         <% customer.projects.each do |project| %>
           <% total= TimeEntry.billed(false).between(day,day.at_end_of_month).for_project(project).sum(:hours) %>
@@ -18,7 +18,7 @@
             </tr>
           <% else %>
             <tr>
-              <th colspan=99><%= check_box_tag  "project[#{project.id}]" -%> <b><%= project.name %></b></th>
+              <td colspan=99><%= check_box_tag  "project[#{project.id}]" -%> <b><%= project.name %></b></td>
             </tr>
 
             <% User.all.each do |user| %>
