--- a/app/views/time_entries/_show_time_entry.html.erb
+++ b/app/views/time_entries/_show_time_entry.html.erb
@@ -1,15 +1,15 @@
 <tr class="time_entry">						
-	<td width="25%"><%= link_to time_entry.activity.truncated_name_path, activity_path(time_entry.activity) %></td>
-	<td width="15%"><%= truncate(time_entry.hour_type.name, :length => 15) %></td> 
+	<td width="28%"><%= link_to time_entry.activity.truncated_name_path, activity_path(time_entry.activity) %></td>
+	<td width="10%"><%= truncate(time_entry.hour_type.name, :length => 15) %></td>
 	<td width="5%"><%= time_entry.hours %></td> 
-	<td width="45%"><%=h time_entry.notes %></td>
-	<td width="5%">
+	<td><%=h time_entry.notes %></td>
+	<td width="3%">
 		<% unless time_entry.locked %>
 			<%= link_to_remote(image_tag("pencil.png", :title => "Edit"), { :url => { :action => :edit, :user_id => @user.id, :id => time_entry.id }, :method => :get }, 
 			:href => edit_user_time_entry_path(@user, time_entry), :method => :get) %>
 		<% end -%>
 	</td>	
-	<td width="5%">
+	<td width="1%">
 		<% unless defined? in_form or time_entry.locked -%>
 			<% form_remote_tag :url => user_time_entry_path(@user, time_entry), :confirm => "Are you sure?",
 			:html => { :action => confirm_destroy_user_time_entry_path(@user, time_entry, :date => @date), :method => :delete, :class => "inline_form" }  do %>
