many small changes, consistent spacing, and removed a lot of <hr>´s

--- a/app/views/activities/_activities.html.erb
+++ b/app/views/activities/_activities.html.erb
@@ -1,5 +1,5 @@
-<%= page_entries_info activities %>
-<hr/>
+<p><%= page_entries_info activities %></p>
+
 <%= will_paginate activities %>
 
 <table class="regular">
