removed 'for ' from time-entries and review in not admin, and implemented 'days XX of YY' in review

--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -59,7 +59,8 @@
       <% end -%>
     <% end %>
   </table>
-  <div class="footer"> Hours: <%= "#{@period.total_hours} / #{@period.expected_hours}" %>, days: X / YY</div>
+  <div class="footer"> Hours: <%= "#{@period.total_hours} / #{@period.expected_hours}" %>,
+    days: <%= "#{@period.total_days} / #{@period.expected_days}" %></div>
 </div>
 
 <br/>
