--- a/app/views/month_reviews/_sub_menu.erb
+++ b/app/views/month_reviews/_sub_menu.erb
@@ -1,4 +1,6 @@
-<h1>Review Month for <%=h @user.fullname %></h1>
+<h1>Review Month
+  <%= @current_user.admin ? "for #{h @user.fullname}" : '' %>
+</h1>
 
 <p>
 	<%=  link_to "Calendar view", user_month_review_path(@current_user, :id => :calendar) %> |
