--- a/app/views/time_entries/_show_time_entry.html.erb
+++ b/app/views/time_entries/_show_time_entry.html.erb
@@ -15,6 +15,8 @@
 			:html => { :action => confirm_destroy_user_time_entry_path(@user, time_entry, :date => @date), :method => :delete, :class => "inline_form" }  do %>
 					<%= image_submit_tag "delete.png", :title => "Delete" %>
 				<% end -%>
+                <% else %>
+                  <%= image_tag("delete_grayed.png", :title => "Delete (disabled)") %>
 		<% end -%>
 	</td>
 </tr>
