--- a/app/views/month_reviews/listing.html.erb
+++ b/app/views/month_reviews/listing.html.erb
@@ -1,6 +1,11 @@
-<%= render :partial => 'sub_menu' -%>
+<%#= render :partial => 'sub_menu' -%>
+<h1>Review Month
+  <%= @current_user.admin ? "for #{h @user.fullname}" : '' %>
+</h1>
 
-<% form_tag user_month_review_path(@current_user, :id => :listing), :method => :get do %>
+<p><%= link_to 'Back', user_month_review_path(@user, :id => :calendar) %></p>
+
+<% form_tag user_month_review_path(@user, :id => :listing), :method => :get do %>
   <p>
     <label for="date">Period</label>
     <%= date_select "calendar", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true, :default => @beginning_of_month} %>
