changes serach result headers, added an unlock button, some styling

--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -16,11 +16,7 @@
   </p>
   <p>
     <%= f.check_box :default_activity %>
-    <%= f.label :default_activity %>
-  </p>
-  <p>
-    <%= f.check_box :shared %>
-    <%= f.label :shared %><br />
+    <%= f.label :default_activity, "Assign to all users" %>
   </p>
   <p>
     <%= f.submit "Save" %>
