--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -29,7 +29,7 @@
         <td style="border-top-style: solid;border-width: 1px">
           <b>Total:</b>
         </td>
-        <td style="border-top-style: solid;border-width: 1px; text-align:right">
+        <td style="border-top-style: solid;border-width: 1px; text-align:right; min-width:3em;">
           <b> <%= @period.total_hours -%></b>
         </td>
       </tr>
