Set focus on activity select when rendering a editable time entry

--- a/app/views/time_entries/_day_header.html.erb
+++ b/app/views/time_entries/_day_header.html.erb
@@ -1,4 +1,4 @@
-<table style="background-color: #EEEEEE; width:100%;padding-top:2px">
+<table style="background-color: #EEEEEE; width:100%">
   <tr>
     <td width="22%">
       <span style="white-space: nowrap; font-weight: bold; ">
