--- a/app/views/time_entries/_time_entry.html.erb
+++ b/app/views/time_entries/_time_entry.html.erb
@@ -1,9 +1,9 @@
 <tr style="background-color: #eeeeee;">
-	<td><%= collection_select(:time_entry, :activity_id, @activities, :id, :truncated_name_path) %></td>
+	<td><%= collection_select(:time_entry, :activity_id, @activities, :id, :truncated_name_path, {}, {:id => "#{day}_editable"}) %></td>
 	<td><%= collection_select(:time_entry, :hour_type_id, HourType.all(:order => "default_hour_type DESC"), :id, :name) %></td>
 	<td><%= f.text_field :hours, :size => 3 %></td>
 	<td><%= f.text_field :notes, :size => 47 %></td>
-	<td><%=  image_submit_tag("disk.png", :title => 'Save') %></td>
+	<td><%= image_submit_tag("disk.png", :title => 'Save') %></td>
 	<td><%= link_to_function image_tag("cancel.png", :title => 'Cancel') do |page|
 			page.replace_html "#{day}_time_entries_container", :partial => "time_entries", :locals => { :time_entries => time_entries, :day => day } 
 			end %></td>
@@ -11,3 +11,5 @@
 <tr>
 	<td colspan="6"><div id='<%= "#{day}_time_entry_error_messages" %>'></div></td>
 </tr>
+
+<%= set_focus_to_id "#{day}_editable" %>
