--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -26,4 +26,4 @@
 
 <script type="text/javascript">enable_disable_year();</script>
 
-<%= link_to 'Back', :action => 'holiday' %>
+<%= link_to 'Back', :action => 'index' %>
