--- a/app/views/vacations/vacation_overview.html.erb
+++ b/app/views/vacations/vacation_overview.html.erb
@@ -5,7 +5,7 @@
 <% activity_vacation = Activity.vacation %>
 
 <h1>Vacation overview</h1>
-<%= render :partial => 'sub_menu' -%>
+<%= render :partial => 'holidays/sub_menu' -%>
 
 <div class="navigation">
 	<h3 class="compact">
