--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Users", users_path %> |
 <%= link_to "Customers", customers_url %> |
 <%= link_to "Hour Types", hour_types_path %> |
-<%= link_to "Activity Templates", activities_path %>
-
+<%= link_to "Activity Templates", activities_path %> |
+<%= link_to "Configure", configurations_path %>
 <br/><br/>
